# Minecraft2D

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
proto/: settings.proto
src/: colour_utils.cpp  game.cpp  main.cpp  textureLoader.cpp
src/gameclasses/: block.cpp  texture.cpp
src/items/: BaseItem.cpp  BaseItem.h  ItemContext.cpp  ItemContext.h  spyglass.cpp  spyglass.h
src/proto/: settings.pb.cc  settings.pb.h
